--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div type="button" id="blue" class="btn blue">
       </div>
     </div>
+    <button id="instructions-button" onclick="instructions();">Instructions</button>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
