--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       </div>
     </div>
     <button id="instructions-button" onclick="instructions();">Instructions</button>
+    <div id="instructions">
+      <p>This is a simple memory game. You have to remember the sequence of colours that are shown.</p>
+      <p>Every time a new level is reached, you have to click on the correct sequence of colours to win the game.</p>
+      <p>For eg: if the first colour is blue, you have to click on the blue button, then the next colour will be shown. Then you will have to click on the blue button and then on the new colour. The game will proceed in the same manner.</p>
+      <p>If you get any of the colours in the sequence wrong then the game will be over and you will have to restart.</p>
+      </div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
